--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10499,6 +10499,19 @@ a.text-dark:focus {
   border-color: #ccc;
 }
 
+.help-block {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #e3342f;
+}
+
+select {
+  border: none;
+  border-color: #ffffff;
+  border-radius: 1px !important;
+}
+
 body {
   background-color: #fff;
 }
